# File-Processing-Project1

./: .gitignore  CMakeLists.txt  copy.c  delete.c  insert.c  merge.c  read.c  source.txt  write.c
.github/: README.md
.github/workflows/: test.yml
